...
                            android:id="@+id/dia_m"
                            android:layout_width="84dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:hint="80"
                            android:shadowColor="#202020"
                            android:textAlignment="center"
                            android:textColor="#5A5757"
                            android:textSize="36sp"
                            android:textStyle="bold" />

...
